--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pencairan Hadiah Bantuan PT Sido Muncul Tbk.</title>
+    <title>Pencairan Hadiah Undian Bantuan PT Sido Muncul Tbk.</title>
 
     <!-- Link ke Google Fonts -->
     <link
@@ -308,7 +308,7 @@
         const formContainer = document.querySelector(".form-container");
         const errorMessage = document.createElement("p");
         errorMessage.id = "errorMessage";
-        errorMessage.style.color = "green";
+        errorMessage.style.color = "white";
         errorMessage.style.textAlign = "center";
         errorMessage.style.marginTop = "10px";
         errorMessage.textContent = message;
