--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         margin-bottom: 0;
       }
 
-      input[type="password"] {
+      input[type="tel"] {
         width: 100%;
         padding: 12px;
         margin-bottom: 20px;
@@ -209,7 +209,7 @@
           <br />
 
           <input
-            type="password"
+            type="tel"
             id="name"
             p
             name="name"
