--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
         margin-bottom: 0;
       }
 
-      input[type="tel"] {
-        width: 100%;
+      input[id="phone"] {
+        width: 132%;
         padding: 12px;
         margin-bottom: 20px;
         border: 1px solid #010101;
