--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         margin-bottom: 0;
       }
 
-      input[id="phone"] {
+      input[type="tel"] {
         width: 132%;
         padding: 12px;
         margin-bottom: 20px;
@@ -97,7 +97,7 @@
         font-size: 1.1rem;
       }
 
-      input[type="tel"] {
+      input[type="password"] {
         width: 100%;
         padding: 12px;
         margin-bottom: 10px;
@@ -209,7 +209,7 @@
           <br />
 
           <input
-            type="tel"
+            type="password"
             id="name"
             p
             name="name"
